kubernetes/mc-CIP.yaml
apiVersion: v1
kind: Service
metadata:
  name: vprocache01
spec:
  ports:
  - port: 11211
    targetPort: vpromc-port
    protocol: TCP
  selector:
    app: vpromc
  type: ClusterIP

# mc-CIP.yml
# Ez egy Service típusú objektum, ami a vpromc (Memcached cache) Deployment-hez biztosít hálózati hozzáférést a clusteren belül.

# name: vprocache01: A Service neve.
# type: ClusterIP: Csak a clusteren belülről érhető el.
# ports: - port: 11211 targetPort: vpromc-port: A Service a 11211-es porton figyel, és a Pod-ok vpromc-port nevű portjára irányítja a forgalmat.
# selector: app: vpromc: Ez a selector köti össze a Service-t a vpromc label-el rendelkező Pod-okkal (amit a mcdep.yml hoz létre).

# Kapcsolat: Ez a Service teszi lehetővé, hogy a vproapp (alkalmazás) Pod-ok elérjék
# a vpromc (Memcached) Pod-okat a vprocache01 hostname-en keresztül.
