kubernetes/vproapp-service.yml
apiVersion: v1
kind: Service
metadata:
  name: my-app
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: vproapp
  type: ClusterIP

# vproapp-service.yml
# Ez egy Service típusú objektum, ami a vproapp (alkalmazás) Deployment-hez biztosít hálózati hozzáférést a clusteren belül.

# name: my-app: A Service neve.
# type: ClusterIP: Csak a clusteren belülről érhető el.
# ports: - port: 8080 targetPort: 8080: A Service a 8080-as porton figyel, és a Pod-ok 8080-as portjára irányítja a forgalmat.
# selector: app: vproapp: Ez a selector köti össze a Service-t a vproapp label-el rendelkező Pod-okkal (amit a vproappdep.yml hoz létre).

# Kapcsolat: Ez a Service teszi lehetővé, hogy a külső forgalom (az Ingress-en keresztül) elérje a vproapp Pod-okat.
